# prompts-mcp

./: .coverage  .cz.toml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  coverage.xml  dev.py  main.py  mise.toml  pyproject.toml  pytest.ini  release.py  release.sh
.github/workflows/: build.yml  dev.yml  inactive.yml  release.yml  security.yml  spell.yml  test.yml
prompts_mcp/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_functions.py  test_integration.py  test_main.py  test_performance.py  test_utils.py
tests/test_prompts/: README.md  sample_prompt_1.md  sample_prompt_2.md  system_prompt.md  user_prompt.md
