[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompts-mcp"
version = "1.0.6"
description = "MCP server that serves prompts from local directory"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.14.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
prompts-mcp = "prompts_mcp.main:main"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
